--- a/industry-project-ecommerce/index.html
+++ b/industry-project-ecommerce/index.html
@@ -5,6 +5,7 @@
     <!-- This is to the set the page icon. -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Industry Project 2 - Ecommerce</title>
   </head>
   <body>
